--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^6.11.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -39,6 +40,7 @@
     "@xiangfa/polly": "^0.4.3",
     "@zip.js/zip.js": "^2.7.57",
     "axios": "^1.10.0",
+    "bcrypt": "^6.0.0",
     "browser-image-compression": "^2.0.2",
     "cheerio": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -52,6 +54,7 @@
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.390.0",
@@ -59,6 +62,7 @@
     "nanoid": "^5.0.7",
     "next": "^14.2.26",
     "next-themes": "^0.4.4",
+    "prisma": "^6.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
