--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ACCESS_PASSWORD=
-GEMINI_API_KEY=AIzaSyAd8XZnGUYtU1rIv93WRyipUbXuWO7NORA
+GEMINI_API_KEY=
+
 GEMINI_API_BASE_URL=
 NEXT_PUBLIC_GEMINI_MODEL_LIST=
 NEXT_PUBLIC_UPLOAD_LIMIT=
